<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HBE</string>
    <string name="title_bible">Biblia</string>
    <string name="subtitle_bible">Slovenský Ekumenický Preklad</string>
    <string name="button_pick">Otvoriť</string>
    <string name="button_chapter">kapitola</string>
    <string name="button_book">kniha</string>
    <string name="pick_activity_option">Späť na Výber</string>
    <string name="exit_option">Koniec</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_scripture">HBE</string>
    <string name="title_activity_finishing">FinishingActivity</string>
    <string name="the_beginning_text">Začiatok</string>
    <string name="the_end_text">Koniec</string>
    <string name="the_seb_text">SEB</string>
    <string name="descrition_back">Pre ukončenie aplikácie stlačte \"Späť\"</string>
    <string name="night_day_mode_title">Nočný/denný režim</string>
    <string name="title_updating">Aktualizujem...</string>
    <string name="updating_so_wait">Počkajte na dokončenie aktualizácie</string>

    <color name="night_back">#222222</color>
    <color name="night_text">#C0C0C0</color>
    <color name="day_back">#FFFFFF</color>
    <color name="day_text">#000000</color>

    <string name="title_activity_bookmark">Záložky</string>
    <string name="bookmark_activity_option">Záložky</string>
    <string name="button_add_bookmark">Pridať</string>
    <string name="toast_bookmark_added">Záložka pridaná</string>
    <string name="button_clear_bookmarks">Vymazať všetky</string>
    <string name="button_bookmark_delete">X</string>
    <string name="button_bookmark_actualize">A</string>
    <string name="yes">Áno</string>
    <string name="no">Nie</string>
    <string name="ok">OK</string>
    <string name="dialog_clear_bookmarks_title">Vymazať všetky záložky?</string>
    <string name="dialog_delete_bookmark_title">Vymazať záložku?</string>
    <string name="dialog_bookmark_msg_created">Vytvorená</string>
    <string name="dialog_actualize_bookmark_title">Aktualizovať záložku?</string>
    <string name="dialog_bookmark_msg_from">Z:</string>
    <string name="dialog_bookmark_msg_to">Na:</string>
    <string name="dialog_bookmarks_too_many_title">Dosiahnuté maximum</string>
    <string name="dialog_bookmarks_too_many_msg">Maximálny počet záložiek = 20.\nNie je možné pridať viac záložiek.</string>
    <string name="title_activity_history">História</string>
    <string name="history_activity_option">História</string>
    <string name="title_activity_search">Vyhľadávanie</string>
    <string name="search_activity_option">Vyhľadávanie</string>
    <string name="button_search">Vyhľadať</string>
    <string name="search_cb_bible_whole">Celá Biblia</string>
    <string name="search_cb_old_testament">Stará zmluva</string>
    <string name="search_cb_new_testament">Nová zmluva</string>
    <string name="search_no_books_picked">Neoznačili ste žiadnu knihu</string>
    <string name="search_string_out_of_range">Rozsah znakov:</string>
    <string name="search_string_invalid_characters">Nepoužívajte znak "*"</string>
    <string name="title_activity_search_results">Výsledky vyhľadávania</string>
    <string name="search_results_nothing_found">Neboli nájdené žiadne výsledky pre:</string>
    <string name="search_results_too_many1">Príliš veľa výsledkov:</string>
    <string name="search_results_too_many2">Zobrazených:</string>
    <string name="title_activity_settings">Nastavenia</string>
    <string name="settigs_activity_option">Nastavenia</string>
    <string name="setting_keepScreenOn">Nezhasínať obrazovku</string>
    <string name="setting_keepScreenOn_summ">Nezhasínať obrazovku počas zobrazeného biblického textu</string>
    <string name="setting_fontSize">Veľkosť písma</string>
    <string name="setting_fontSize_summ">Veľkosť písma biblického textu</string>
    <string name="title_activity_about">O preklade</string>
    <string name="about_activity_option">O preklade</string>
    <string name="about_text1">Slovenský ekumenický preklad</string>
    <string name="about_text2">© Slovenská biblická spoločnosť, 2008</string>
    <string name="about_text3">www.biblickaspolocnost.sk</string>
    <string name="about_description">Preklad sa realizoval v rokoch 1990 - 2007.\nNa prácach pri vydaní Biblie sa zúčastňovali zástupcovia členských cirkví SBS (v abecednom poradí): Apoštolská cirkev na Slovensku, Bratská jednota baptistov, Cirkev adventistov siedmeho dňa, Cirkev bratská, Evanjelická cirkev augsburského vyznania, Evanjelická cirkev metodistická, Gréckokatolícka cirkev, Pravoslávna cirkev, Reformovaná kresťanská cirkev, Rímskokatolícka cirkev.\n\nPrácu prekladateľskej skupiny Starej Zmluvy viedol prof. ThDr. Juraj Bándy.\nPrácu prekladateľskej skupiny Novej Zmluvy viedol doc. ThDr. Ján Grešo.\n\nText bol schválený Konferenciou biskupov Slovenska dňa 27.3.2008, č. 9-K/08.</string>

</resources>