<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity" >

    <EditText
        android:id="@+id/search_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_search" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/search_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </ScrollView>

    <CheckBox
        android:id="@+id/search_cb_bible_whole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_cb_bible_whole" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/search_cb_old_testament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_cb_old_testament" />

        <CheckBox
            android:id="@+id/search_cb_new_testament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/search_cb_new_testament" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice" >
    </ListView>

</LinearLayout>